fix(3156128933): align terms screen to figma

--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -33,6 +33,7 @@ $--color-metallic-orange: #dc6803;
 $--color-maize: #fec84b;
 $--color-very-light-blue: #5865f2;
 $--color-dark-blue-gray: #65668c;
+$--color-brilliant-azure: #4295f7;
 
 :export {
   colorBlack: $--color-black;
@@ -54,4 +55,5 @@ $--color-dark-blue-gray: #65668c;
   colorDodgerBlue: $--color-dodger-blue;
   colorFlame: $--color-flame;
   colorDarkBlueGray: $--color-dark-blue-gray;
+  colorBrilliantAzure: $--color-brilliant-azure;
 }
